# Agentic-RAG-Training-2026

./: Agentic_notes.txt
Capstone Project - 2/: Smart Banking Assistant - with schema changes.docx  Smart Banking Assistant.docx
Capstone project - 1/: Capstone Project_2_Personalized_Retail_Banking.docx
audio_rag/: main.py  pyproject.toml
audio_rag/app/db/: db.py
audio_rag/app/prompts/: systemprompts.py
audio_rag/app/routes/: routes.py
audio_rag/app/services/: ingestion.py  retrieval.py
audio_rag/app/ui/: retrieval_ui.py  upload_ui.py
langgraph_examples/: pyproject.toml
langgraph_examples/examples/: ex10_hitl.py  ex11_chatbot.py  ex12_rag_system.py  ex1_hello_world.py  ex2_greet.py  ex3_router.py  ex4_loops.py  ex5_research_clarify_answer.py  ex6_tool_call.py  ex7_tool_workflow.py  ex8_tool_node.py  ex9_simple_react_agent.py
mcp-server-demo/: HOW_TO_RUN_MCP_SERVERS_REMOTELY.md  README.md  ex13_agent_with_mcp.py  main.py  pyproject.toml
mcp-server-demo/docs/: mcp-server-guide.md
mutimodal_rag_system/: README.md  main.py  pyproject.toml  schema.sql
mutimodal_rag_system/src/: main.py
mutimodal_rag_system/src/core/: db.py
mutimodal_rag_system/src/ingestion/: docling_parser.py  ingestion.py
mutimodal_rag_system/src/routes/: routes.py
naive_rag_system/: main.py  pyproject.toml
naive_rag_system/app/: main.py
naive_rag_system/app/api/v1/routes/: routes.py
naive_rag_system/app/core/: db.py
naive_rag_system/app/ingestion/: ingestion.py
naive_rag_system/app/prompts/: systemprompts.py
naive_rag_system/app/retrieval/: retrieval_gemini.py  retrieval_openai.py
naive_rag_system/app/ui/: retrieval.py  upload.py
naive_rag_system/data/: test.txt
products-rest-api/: README.md  pyproject.toml
products-rest-api/app/: main.py  schemas.py
products-rest-api/app/db/: database.py  models.py
products-rest-api/app/routes/: products_routes.py
products-rest-api/app/services/: products_service.py
products-rest-api/routestemp/: product_routes.py
reranking_rag_sytem/: main.py  pyproject.toml  questions
reranking_rag_sytem/src/: main.py  schema.sql
reranking_rag_sytem/src/api/v1/agents/: agents.py
reranking_rag_sytem/src/api/v1/ingestion/: ingestion.py
reranking_rag_sytem/src/api/v1/routes/: query.py
reranking_rag_sytem/src/api/v1/schema/: query_schema.py
reranking_rag_sytem/src/api/v1/services/: query_service.py
reranking_rag_sytem/src/api/v1/tools/: tools.py
reranking_rag_sytem/src/core/: db.py  guardrails.py
smart_banking_assistant/: main.py  pyproject.toml  schema.sql
smart_banking_assistant/src/: main.py
smart_banking_assistant/src/api/v1/agents/: agents.py
smart_banking_assistant/src/api/v1/core/: db.py  guardrails.py
smart_banking_assistant/src/api/v1/ingestion/: docling_parser copy.py  docling_parser.py  ingestion copy.py  ingestion.py
smart_banking_assistant/src/api/v1/prompts/: system_prompt.py
smart_banking_assistant/src/api/v1/routes/: routes.py
smart_banking_assistant/src/api/v1/schema/: query_schema.py
smart_banking_assistant/src/api/v1/services/: query_service.py
smart_banking_assistant/src/api/v1/tools/: tools.py
smart_banking_assistant/src/api/v1/ui/: retrieval_ui.py  upload_ui.py
