[project]
name = "audio-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google>=0.1.1",
    "langchain-google-genai>=4.2.4",
    "langchain-postgres>=0.0.17",
    "mutagen>=1.47.0",
    "streamlit>=1.58.0",
    "uvicorn>=0.48.0",
]
