[project]
name = "mutimodal-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.96.1",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-openai>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.2.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "uvicorn>=0.48.0",
]
