[project]
name = "naive-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=7.0.3",
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.3",
    "langchain-openai>=1.2.2",
    "langchain-postgres>=0.0.17",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.12.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.29",
    "tiktoken>=0.13.0",
    "uvicorn>=0.48.0",
]
