[project]
name = "reranking-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=7.0.3",
    "fastapi>=0.136.3",
    "guardrails-ai>=0.10.2",
    "langchain>=1.3.4",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.2.4",
    "pdfminer-six>=20260107",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.31",
    "unstructured-inference>=1.6.11",
    "unstructured[pdf]>=0.22.31",
    "uvicorn>=0.49.0",
]
