[project]
name = "smart-banking-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=7.0.3",
    "docling>=2.97.0",
    "fastapi>=0.136.3",
    "guardrails-ai>=0.10.2",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langgraph>=1.2.4",
    "psycopg2>=2.9.12",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
